@@ -34,16 +34,27 @@ class CommandWorldGenDebug(mcpython.server.command.Command.Command):
         command_syntax_holder.main_entry = "worldgendebug"
         command_syntax_holder.add_node(
             Node(CommandArgumentType.DEFINED_STRING, "info")
+        ).add_node(
+            Node(CommandArgumentType.DEFINED_STRING, "ping")
         )
 
     @classmethod
     def parse(cls, values: list, modes: list, info):
+        remote_helper = shared.world.world_generation_process
         if values[0] == "info":
-            remote_helper = shared.world.world_generation_process
-            remote_helper.run_on_process(lambda context: print(context.get_helper().worker_count))
+            # -1 because we (the query task) are currently also running
+            print(remote_helper.get_worker_count())
+
+        elif values[0] == "ping":
+            def ping(context):
+                print("ping")
+                context.get_helper().run_on_main(lambda _: print("pong"))
+
+            remote_helper.run_on_process(ping)
 
     @staticmethod
     def get_help() -> list:
         return [
-            "/worldgendebug info: prints general information about world gen"
+            "/worldgendebug info: prints general information about world gen",
+            "/worldgendebug ping: pings the world generation process. If everything is fine, prints 'ping' and 'pong'"
         ]
